Fix flex flow on mobile

--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -248,11 +248,11 @@ a:active{
 
 .content {
   @include display(flex);
-  @include flex-flow(row wrap);
+  @include flex-flow(column wrap);
   @include justify-content(flex-start);
   box-shadow: inset 0 1px 0 0 rgba($base-color, 0.08);
   @include media(large-up) {
-    @include flex-flow(row no-wrap);
+    @include flex-flow(row wrap);
   }
 }
 
@@ -312,6 +312,9 @@ a:active{
 .tile-body {
   color: tint($base-color, 44%);
   @extend .clearfix;
+  .col-intro & {
+    max-width: 32rem;
+  }
   .chart-group & {
     margin: -0.5rem;
   }
